tests/modules-corpus/corpus/reject/r_m5_type_mismatch.pdx
// Issue #242: signature matching — kind mismatch (val vs type).
// M0302: structure binding kind or type does not match signature declaration.

module M : sig { val x : int } = structure {
  type x = int
}
